syntax = "proto3";

package order;

option go_package = "./proto";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}

message CreateOrderRequest {
  uint64 user_id = 1;
  repeated CreateOrderItem items = 2;
}

message CreateOrderItem {
  uint64 product_id = 1;
  uint64 quantity = 2;
}

message OrderItem {
  uint64 product_id = 1;
  string name = 2;
  double price = 3;
  uint64 quantity = 4;
  double total_price = 5;
}

message GetOrderRequest {
  uint64 order_id = 1;
  uint64 user_id = 2;
}

message UpdateOrderRequest {
  uint64 order_id = 1;
  string status = 2;
}

message OrderResponse {
  uint64 order_id = 1;
  uint64 user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  string status = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ListOrdersRequest {
  uint64 user_id = 1;
  int64 page = 2;
  int64 limit = 3;
}

message ListOrdersResponse {
  repeated OrderResponse orders = 1;
  int64 total = 2;
}